# My_First_Codex_Project

./: .gitignore  README.md  package.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/services/: __init__.py  feaso.py  parcels.py  provenance.py  reports.py  utils.py
apps/web/: package.json  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/agent/: page.tsx
apps/web/app/developer/: page.tsx
apps/web/app/investor/: page.tsx
apps/web/components/: CmaStudio.tsx  FeasoModal.tsx  ParcelRiskCard.tsx  ProvenancePanel.tsx  WorkspaceShell.tsx
apps/web/styles/: globals.css
docs/: API-SPEC.yaml  DATA-SOURCES.csv  GTM-PRICING.md  PRD.md  SCRAPING-PLAYBOOK.md  SECURITY-COMPLIANCE.md  TECH-ARCH.md
etl/: nsw_flood_ingest.py
seeds/: comps.json  da_applications.json  data_provenance.json  overlays.json  owners.json  parcels.json
sql/: DB-SCHEMA.sql
