[tool.poetry]
name = "devfindr-api"
version = "0.1.0"
description = "FastAPI service for DevFindr + PricePro MVP"
authors = ["Dev Team <dev@devfindr.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
udantic = "^0.6.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
sqlalchemy = {version = "^2.0.29", extras=["asyncio"]}
geojson-pydantic = "^0.5.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
